# clip-translator

./: .gitignore  .prettierignore  README.md  components.json  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
.react-router/types/app/routes/config/+types/: route.ts
app/: entry.client.tsx  env.d.ts  root.tsx
app/commands/: app-config.ts  greet.ts
app/components/ui/: button.tsx  index.ts  input.tsx  skeleton.tsx  sonner.tsx  spinner.tsx  textarea.tsx
app/hooks/: useDebounce.ts
app/routes/: _index.tsx  config.tsx  test.tsx
app/routes/_index/: route.tsx
app/routes/_index/components/: FooterMenu.tsx  Layout.tsx  ModelSelect.tsx  ModelSelector.tsx  index.ts  model-selector.tsx
app/routes/_index/functions/: index.ts  translate-claude3.ts  translate-gemini.ts  translate.ts
app/routes/config/: route.tsx
app/routes/config/components/: Layout.tsx
app/services/: claude3.ts  config.client.ts  global-shortcut.client.ts  notification.client.ts  openai.ts  translate.ts
app/services/models/: claude3.ts  gemini.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: main.rs
src/app/: root.tsx
src/app/components/ui/: button.tsx  input.tsx
src/app/routes/: _index.tsx
